Update movie recommender vf.ipynb

--- a/movie recommender vf.ipynb
+++ b/movie recommender vf.ipynb
@@ -599,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movieDF = spark.read.csv(\"../input/movielens-20m-dataset/movie.csv\", inferSchema=True, header=True)"
+    "movieDF = spark.read.csv(\"../input/movielens/movies.csv\", inferSchema=True, header=True)"
    ]
   },
   {
